<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_activity_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        android:title="@string/menu_main_activity_search"/>

    <item
        android:id="@+id/menu_main_activity_notifications"
        app:showAsAction="never"
        android:title="@string/main_menu_notifications"/>

    <item
        android:id="@+id/menu_main_activity_help"
        app:showAsAction="never"
        android:title="@string/main_menu_help"/>

    <item
        android:id="@+id/menu_main_activity_about"
        app:showAsAction="never"
        android:title="@string/main_menu_about"/>
</menu>