<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolBarTheme"
        app:popupTheme="@style/MenuToolBarTheme">
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/small_margin"
            android:id="@+id/query_layout"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/query_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="true"
                android:hint="@string/search_query_term"
                android:inputType="text" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/query_layout">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/begin_date_input_layout"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:errorEnabled="true"
                android:layout_margin="@dimen/small_margin">

                <EditText
                    android:id="@+id/search_fragment_start_begin_date"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="date"
                    android:hint="@string/begin_date"
                    android:textSize="@dimen/text_date_size"
                    android:onClick="showStartDatePickerDialog"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/end_date_input_layout"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:errorEnabled="true"
                android:layout_margin="@dimen/small_margin">

                <EditText
                    android:id="@+id/search_fragment_search_end_date"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="date"
                    android:hint="@string/end_date"
                    android:textSize="@dimen/text_date_size"
                    android:onClick="showEndDatePickerDialog"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/section_layout"
            app:layout_constraintTop_toBottomOf="@id/layout_date">

            <GridLayout
                android:id="@+id/search_items_check_boxes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="3"
                android:layout_margin="@dimen/small_margin">
                <CheckBox
                    android:id="@+id/search_item_art"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_item_arts"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"/>
                <CheckBox
                    android:id="@+id/search_item_business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/search_item_business"
                    android:layout_columnWeight="1"/>
                <CheckBox
                    android:id="@+id/search_item_entrepreneurs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:text="@string/search_item_entrepreneurs"
                    android:layout_columnWeight="1"/>
                <CheckBox
                    android:id="@+id/search_item_politics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:text="@string/search_item_politics"
                    android:layout_columnWeight="1"/>
                <CheckBox
                    android:id="@+id/search_item_sport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="@string/search_item_sports"
                    android:layout_columnWeight="1"/>
                <CheckBox
                    android:id="@+id/search_item_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:text="@string/search_item_travel"
                    android:layout_columnWeight="1"/>

            </GridLayout>

        </LinearLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_button"
            android:background="@color/colorPrimary"
            android:textColor="@color/textPrimaryColor"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/section_layout"
            android:transitionName="@string/animation_search_to_result_zoom"/>

    </LinearLayout>

</LinearLayout>